[package]
name = "lumix"
version = "0.2.1"
edition = "2021"
description = "A simple, fast tool to control monitor features like brightness via DDC/CI."
license = "MIT"
repository = "https://github.com/Yrrrrrf/lumix"
keywords = ["brightness", "ddc", "control", "monitor", "cli"]

[dependencies]
# Powerful, modern CLI argument parser
clap = { version = "4.5.41", features = ["derive"] }

# Safe, cross-platform DDC/CI (monitor control) library
ddc-hi = "0.4.1"

# We keep the release profile optimizations, they are excellent!
[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
panic = "abort"